--- a/views/index.html
+++ b/views/index.html
@@ -22,7 +22,7 @@
         <section id="Top">
             <div class="fluid-container">
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
-            <a class="navbar-brand" href="#">PathPooja.com</a>
+            <a class="navbar-brand" href="/">PathPooja.com</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
             </button>
@@ -46,7 +46,7 @@
           </nav>
         </div>
         <div class="fluid-container main-background">
-            <img src="public\images\image1.png" alt="">
+            <img src="images/image1.png" alt="">
         </div>
         </section>
 
