--- a/views/index.html
+++ b/views/index.html
@@ -46,7 +46,7 @@
           </nav>
         </div>
         <div class="fluid-container main-background">
-            <img src="public\images\image1.png" alt="">
+            <img src="public\images\image1.png" alt="helo world">
         </div>
         </section>
 
