--- a/views/index.ejs
+++ b/views/index.ejs
@@ -24,7 +24,7 @@
   <div class="container-fluid">
     <section id="Top">
       <nav class="navbar navbar-expand-lg">
-        <a class="navbar-brand" href="#"><img src="images\brand.png" alt=""></a>
+        <a class="navbar-brand" href="#"><img class="Logo" src="images\brand.png" alt=""></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -60,7 +60,7 @@
       <div>
         <h1>ॐ भूर्भुवः स्वः तत्सवितुर्वरेण्यं भर्गो देवस्यः धीमहि धियो यो नः प्रचोदयात्</h1>
         <img class="diya2"src="images\diya2.png" alt="">
-        <img src="images\swastik.png" alt="">
+        <img class="swastik"src="images\swastik.png" alt="">
         <img class="diya1"src="images\diya.png" alt="">
       </div>
     </section>
@@ -111,7 +111,12 @@
   
       </div>
     </section>
-    <section class="Bottom"></section>
+    <section id="Bottom">
+      <div class="container-fluid">
+        <h6>Copyright © Your Website 2019</h6>
+
+      </div>
+    </section>
   </div>
  
 </body>
