--- a/views/includes/footer.ejs
+++ b/views/includes/footer.ejs
@@ -1,2 +1,10 @@
+<section id="Bottom">
+    <div class="container-fluid">
+      <h6>Copyright © Your Website 2019</h6>
+
+    </div>
+  </section>
+</div>
+
 </body>
 </html>
