--- a/views/index.ejs
+++ b/views/index.ejs
@@ -66,25 +66,6 @@
     </section>
     <section id="Mid">
       <div class="row">
-
-        <div class="col-lg-4 col-md-6 price-card">
-          <div class="card ">
-            <div class="card-header">
-              <h3> संस्कार पूजा (सोलह संस्कार)</h3>
-            </div>
-            <div class="card-body">
-              <% for(i = 0;i<puja.length;i++){ %>
-                <% if(puja[i].pcat === 1) { %>
-                  <p><a href=<%-puja[i].p_id %> > <%- puja[i].p_name %>  </a></p>
-                <% } %>
-              <%} %>
-              
-              
-              <button type="button " class="s_button red-button-large">View All</button>
-            </div>
-  
-          </div>
-        </div>
         <div class="col-lg-4 col-md-6 price-card">
           <div class="card ">
             <div class="card-header">
@@ -94,15 +75,35 @@
               
               <% for(i = 0;i<puja.length;i++){ %>
                 <% if(puja[i].pcat === 2) { %>
-                  <p><a href=<%-puja[i].p_id %> > <%- puja[i].p_name %>  </a></p>
+                 <div class="links"> <p><a class="puja-link" href=<%-puja[i].p_id %> > <%- puja[i].p_name %>  </a></p> </div>
                 <% } %>
               <%} %>
               
-              <button type="button" class="s_button red-button-large">View All</button>
+              
             </div>
   
           </div>
         </div>
+
+        <div class="col-lg-4 col-md-6 price-card">
+          <div class="card ">
+            <div class="card-header">
+              <h3> संस्कार पूजा (सोलह संस्कार)</h3>
+            </div>
+            <div class="card-body">
+              <% for(i = 0;i<puja.length;i++){ %>
+                <% if(puja[i].pcat === 1) { %>
+                 <div class="links"> <p><a class="puja-link" href=<%-puja[i].p_id %> > <%- puja[i].p_name %>  </a></p> </div>
+                <% } %>
+              <%} %>
+              
+              
+              
+            </div>
+  
+          </div>
+        </div>
+        
         <div class="col-lg-4 col-md-12 price-card ">
           <div class="card">
             <div class="card-header">
@@ -111,12 +112,12 @@
             <div class="card-body">
               <% for(i = 0;i<puja.length;i++){ %>
                 <% if(puja[i].pcat === 3) { %>
-                  <p><a href=<%-puja[i].p_id %> > <%- puja[i].p_name %>  </a></p>
+                 <div class="links"> <p><a class="puja-link" href=<%-puja[i].p_id %> > <%- puja[i].p_name %>  </a></p> </div>
                 <% } %>
               <%} %>
               
               
-              <button type="button" class="s_button red-button-large">View All</button>
+              
             </div>
   
           </div>
