--- a/public/css/index.css
+++ b/public/css/index.css
@@ -270,9 +270,10 @@ h2{
 .desc-p-div{
     border-style: solid;
    border-width: 1px;
-   margin-top: 2px;
+   margin-top: 1%;
    padding: 1%;
    background-color: wheat;
+   border-radius: 20px;
 }
 .desc-p-div:hover{
     transform: scale(1.1);
