--- a/views/details.ejs
+++ b/views/details.ejs
@@ -49,6 +49,9 @@
 </div>
 </div>
 </div>
+<div>
+    <button class="s_button red-button-large date">Check Dates</button>
+</div>
 
 
 <%- include('includes/footer')   -%>
