--- a/public/css/index.css
+++ b/public/css/index.css
@@ -27,7 +27,7 @@ h2{
     font-size: 1.5rem;
     padding: .5rem 1rem;
     border-radius: .5rem;
-    width: 100%;
+    
   }
   .red-button-large:hover{
       background-color: red;
@@ -251,10 +251,10 @@ h2{
 .desc-image{
     position: absolute;
     width: 5%;
-    margin-left: 10%;
+    margin-left: 30%;
 }
 .desc-mid{
-    padding: 0 5% 5% 5%;
+    padding: 0 5% 0.75% 5%;
 }
 .desc-h2{
     font-size: 2rem;
@@ -279,6 +279,9 @@ h2{
     transform: scale(1.1);
 
 }
+.date{
+    margin-left: 5%;
+}
 
 /**************************************************************Media Query**************************************/
 @media (max-width:1200px){
@@ -289,7 +292,7 @@ h2{
         position: absolute;
         width: 9%;
         margin-left: 25%;
-        margin-top: 10%;
+        margin-top: 3%;
     }
     
     .desc-h2{
@@ -303,5 +306,22 @@ h2{
        
     }
 
+}
+@media (max-width:800px){
+
+    .desc-image{
+        position: absolute;
+        width: 9%;
+        margin-left: 25%;
+        margin-top: 10%;
+    }
+}
+@media (max-width:500px){
+    .Logo{
+        width: 150px;
+    }
+    .desc-h1{
+        font-size: 1rem;
+    }
 }
 /*--------------------------------------------------*******************************************-----------------------------------------------*/
