--- a/views/index.ejs
+++ b/views/index.ejs
@@ -31,21 +31,21 @@
         <div class="collapse navbar-collapse nav-links" id="navbarNav">
           <ul class="navbar-nav ml-auto">
             <li class="nav-item ">
-              <a class="nav-link" href="#">Home</a>
+              <a class="nav-link" href="/">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">About</a>
+              <a class="nav-link" href="/about">About</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Blog</a>
+              <a class="nav-link" href="/blog">Blog</a>
             </li>
             <li class="nav-item dropdown">
               <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                 Login
               </a>
               <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                <a class="dropdown-item" href="#">User</a>
-                <a class="dropdown-item" href="#">Panditji</a>
+                <a class="dropdown-item" href="/auth/user/login">User</a>
+                <a class="dropdown-item" href="/auth/pandit/login">Panditji</a>
               </div>
             </li>
           </ul>
