--- a/views/index.ejs
+++ b/views/index.ejs
@@ -24,7 +24,7 @@
   <div class="container-fluid">
     <section id="Top">
       <nav class="navbar navbar-expand-lg">
-        <a class="navbar-brand" href="#"><img class="Logo" src="images\brand.png" alt=""></a>
+        <a class="navbar-brand" href="/"><img class="Logo" src="images\brand.png" alt=""></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
