--- a/public/css/index.css
+++ b/public/css/index.css
@@ -325,3 +325,10 @@ h2{
     }
 }
 /*--------------------------------------------------*******************************************-----------------------------------------------*/
+.login-image{
+    width: 100%;
+    
+}
+.login-back{
+    background-color: wheat;
+}
