--- a/views/login.ejs
+++ b/views/login.ejs
@@ -4,6 +4,13 @@
 <center>
     <h1><%= page %> Login Page</h1>
 </center>
+<div class="row">
+    <div class="col-lg-6 login-back">
+        <img class="login-image"src="\images\landing.png" alt="">
+    </div>
+    <div class="col-lg-6"></div>
+
+</div>
 
 
 
