--- a/views/includes/header.ejs
+++ b/views/includes/header.ejs
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>PathPooja.com</title> 
-    <link rel="icon" href="images\swastik.png">
+    <link rel="icon" href="\images\swastik.png">
     <!-- -------Font---------- -->
     <link href="https://fonts.googleapis.com/css?family=Courgette|Merriweather+Sans|Montserrat|Poppins&display=swap" rel="stylesheet">
     
