able to create new user

--- a/views/login.ejs
+++ b/views/login.ejs
@@ -3,6 +3,22 @@
 
 <center>
     <h1><%= page %> Login Page</h1>
+
+    <form action="/auth/user/login" method="POST" >
+        <p>First Name</p>
+        <input type="text" name="fName">
+        <p>Last Name</p>
+        <input type="text" name="lName">
+        <p>Email</p>
+        <input type="email" name="email">
+        <p>Password</p>
+        <input type="password" name="password"> 
+        <p>Address</p>
+        <input type="text" name="address">
+        <br><br>
+
+        <button type="submit">Login</button>
+    </form>
 </center>
 <div class="row">
     <div class="col-lg-6 login-back">
