--- a/public/css/index.css
+++ b/public/css/index.css
@@ -325,10 +325,73 @@ h2{
     }
 }
 /*--------------------------------------------------*******************************************-----------------------------------------------*/
+.login-div{
+    position: relative;
+    width: 100%;
+    height: 102vh;
+}
+.login-footer{
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+}
+
 .login-image{
     width: 100%;
     
 }
-.login-back{
-    background-color: wheat;
+.login-background{
+    background-color: #FEC969;
+    height: 100%;
+}
+.namaste{
+    width: 50%;
+    margin: 40% 20% ;
+}
+.row{
+    margin-right: 0;
+    position: absolute;
+    width: 100%;
+    
+}
+.red-button-login {
+    
+    border-color: whitesmoke;
+    color: red;
+    font-size: 1rem;
+    padding: .3rem 2.5rem;
+    border-radius: .5rem;
+    margin: 0 30%;
+    box-shadow: .1rem .1rem gray;
+    
+  }
+  .red-button-login:hover{
+      border-color: red;
+      color: whitesmoke;
+      background-color: red;
+      transform: scale(1.5);
+  }
+  .login-title{
+      position: absolute;
+      margin: 30% 29%;
+      font-size: 3.5rem;
+      font-family: 'Montserrat', sans-serif;
+      
+  }
+  .form-text{
+      margin: 15% 0 2% 0;
+      font-size: 1.2rem;
+  }
+  .text-box{
+      border: solid;
+      border-width: 1px;
+      border-radius: 12px;
+      padding: 5%;
+      box-shadow: 0.1rem 0.1rem black;
+  }
+  .input-box:hover{
+      transform: scale(1.2);
+  }
+.login-form{
+    padding: 7% 18%;
 }
