--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,30 +1,44 @@
 <%- include('includes/header')   -%>
 
+<div class="login-div">
 
-<center>
-    <h1><%= page %> Login Page</h1>
-
-    
-</center>
 <div class="row">
-    <div class="col-lg-6 login-back">
-        <img class="login-image"src="\images\landing.png" alt="">
+    <div class="col-lg-6 col-md-6 col-sm-2 login-back">
+        <div class="login-background">
+            <h1 class="login-title">Welcome</h1>
+            <img class="namaste" src="\images\namaste.png" alt="">
+
+        </div>
     </div>
-    <div class="col-lg-6">
+    <div class="col-lg-5 col-md-6 col-sm-2 login-form">
         <form action=<%="/auth/"+ path +"/login" %>  method="POST" >
-            <p>First Name</p>
-            <input type="text" name="fName">
-            <p>Last Name</p>
-            <input type="text" name="lName">
-            <p>Email</p>
-            <input type="email" name="email">
-            <p>Password</p>
-            <input type="password" name="password"> 
-            <p>Address</p>
-            <input type="text" name="address">
+            <p  class="form-text">First Name</p>
+            <div class="input-box">
+            <input class="text-box" type="text" name="fName">
+        </div>
+            <p class="form-text">Last Name</p>
+            <div class="input-box">
+            <input class="text-box" type="text" name="lName">
+        </div>
+            <p class="form-text">Email</p>
+            <div class="input-box">
+            <input class="text-box" type="email" name="email">
+        </div>
+            <p class="form-text">Password</p>
+            <div class="input-box">
+            <input class="text-box" type="password" name="password">
+        </div> 
+            <p class="form-text">Address</p>
+            <div class="input-box">
+            <input class="text-box" type="text" name="address">
+        </div>
+            <p class="form-text">Pincode</p>
+            <div class="input-box">
+            <input class="text-box" type="number" name="address">
+        </div>
             <br><br>
     
-            <button type="submit">Login</button>
+            <button class="s_button red-button-login" type="submit">Login</button>
         </form>
     </div>
 
@@ -32,5 +46,7 @@
 
 
 
-
+<div class="login-footer"> 
 <%-  include('includes/footer') -%>
+</div>
+</div>
