--- a/public/css/index.css
+++ b/public/css/index.css
@@ -341,7 +341,7 @@ h2{
     font-size: 1rem;
     padding: .3rem 2.5rem;
     border-radius: .5rem;
-    margin: 0 30%;
+    margin: 0 23%;
     box-shadow: .1rem .1rem gray;
     
   }
@@ -359,21 +359,21 @@ h2{
       
   }
   .form-text{
-      margin: 15% 0 2% 0;
+      margin: 10% 0 2% 0;
       font-size: 1.2rem;
   }
   .text-box{
       border: solid;
       border-width: 1px;
       border-radius: 12px;
-      padding: 5%;
+      padding: 3.5%;
       box-shadow: 0.1rem 0.1rem black;
   }
   .input-box:hover{
       transform: scale(1.2);
   }
 .login-form{
-    padding: 7% 18%;
+    padding: 4% 18% 7% 18%;
 }
 .row{
     margin: 0;
