--- a/views/login.ejs
+++ b/views/login.ejs
@@ -10,7 +10,7 @@
 
         </div>
     </div>
-    <div class="col-lg-5 col-md-6 col-sm-2 login-form">
+    <div class="col-lg-6 col-md-6 col-sm-2 login-form">
         <form action=<%="/auth/"+ path +"/login" %>  method="POST" >
             <p  class="form-text">First Name</p>
             <div class="input-box">
@@ -34,7 +34,7 @@
         </div>
             <p class="form-text">Pincode</p>
             <div class="input-box">
-            <input class="text-box" type="number" name="address">
+            <input class="text-box" type="number" name="pincode">
         </div>
             <br><br>
     
