--- a/public/css/index.css
+++ b/public/css/index.css
@@ -394,3 +394,34 @@ h2{
     border-bottom: none;
 
 }
+@media(max-width:1100px){
+    .namaste {
+        width: 50%;
+        margin: 60% 25%;
+    }
+    .login-title {
+        position: absolute;
+        margin: 32% 25%;
+        font-size: 3rem;
+        font-family: 'Montserrat', sans-serif;
+    }
+}
+@media(max-width:992px){
+    .login-title {
+        position: absolute;
+        margin: 30% 17%;
+        font-size: 3rem;
+        font-family: 'Montserrat', sans-serif;
+    }
+
+}
+@media(max-width:500px){
+    .login-title{
+        font-size: 2.5rem;
+    margin-top: 20%;
+    margin-left: 20%;
+    }
+    .namaste{
+        margin: 45% 25%;
+    }
+}
