--- a/public/css/index.css
+++ b/public/css/index.css
@@ -326,7 +326,7 @@ h2{
 }
 /*--------------------------------------------------*******************************************-----------------------------------------------*/
 
-
+/**************************************************Login Page******************************************************/
 
 
 .namaste{
@@ -394,6 +394,7 @@ h2{
     border-bottom: none;
 
 }
+/******************************************Media query*************************************/
 @media(max-width:1100px){
     .namaste {
         width: 50%;
