--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,31 +1,42 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>PathPooja.com</title> 
-    <link rel="icon" href="images\swastik.png">
-    <!-- -------Font---------- -->
-    <link href="https://fonts.googleapis.com/css?family=Courgette|Merriweather+Sans|Montserrat|Poppins&display=swap" rel="stylesheet">
-    
-    <!-- -----BootStrap-------->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-    
-    <!-- --------CSS--------- -->
-    <link rel="stylesheet" href="/css/index.css">
-   
-    <!-- --------jquery------- -->
-    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <title>PathPooja.com</title>
+  <link rel="icon" href="images\swastik.png">
+  <!-- -------Font---------- -->
+  <link href="https://fonts.googleapis.com/css?family=Courgette|Merriweather+Sans|Montserrat|Poppins&display=swap"
+    rel="stylesheet">
+
+  <!-- -----BootStrap-------->
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
+    integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+
+  <!-- --------CSS--------- -->
+  <link rel="stylesheet" href="/css/index.css">
+
+  <!-- --------jquery------- -->
+  <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
+    integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
+    crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+    integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
+    crossorigin="anonymous"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
+    integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
+    crossorigin="anonymous"></script>
 </head>
+
 <body>
   <div class="container-fluid">
     <section id="Top">
       <nav class="navbar navbar-expand-lg">
         <a class="navbar-brand" href="/"><img class="Logo" src="images\brand.png" alt=""></a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+          aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse nav-links" id="navbarNav">
@@ -40,28 +51,32 @@
               <a class="nav-link" href="/blog">Blog</a>
             </li>
             <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+              <% if(!isLogin){%>
+              <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button"
+                data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                 Login
               </a>
               <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
                 <a class="dropdown-item" href="/auth/user/login">User</a>
                 <a class="dropdown-item" href="/auth/pandit/login">Panditji</a>
               </div>
+              <%} %>
+
             </li>
           </ul>
         </div>
       </nav>
       <div class="container-fluid">
-        <img class="landing-image1"src="images\landing.png" alt="">
-        <img class="landing-image2"src="images\image1.png" alt="">
+        <img class="landing-image1" src="images\landing.png" alt="">
+        <img class="landing-image2" src="images\image1.png" alt="">
       </div>
     </section>
     <section id="Mantra">
       <div>
         <h1>ॐ भूर्भुवः स्वः तत्सवितुर्वरेण्यं भर्गो देवस्यः धीमहि धियो यो नः प्रचोदयात्</h1>
-        <img class="diya2"src="images\diya2.png" alt="">
-        <img class="swastik"src="images\swastik.png" alt="">
-        <img class="diya1"src="images\diya.png" alt="">
+        <img class="diya2" src="images\diya2.png" alt="">
+        <img class="swastik" src="images\swastik.png" alt="">
+        <img class="diya1" src="images\diya.png" alt="">
       </div>
     </section>
     <section id="Mid">
@@ -72,16 +87,18 @@
               <h3> ज्योतिष</h3>
             </div>
             <div class="card-body">
-              
+
               <% for(i = 0;i<puja.length;i++){ %>
-                <% if(puja[i].pcat === 2) { %>
-                 <div class="links"> <p><a class="puja-link" href=<%-puja[i].p_id %> > <%- puja[i].p_name %>  </a></p> </div>
-                <% } %>
+              <% if(puja[i].pcat === 2) { %>
+              <div class="links">
+                <p><a class="puja-link" href=<%-puja[i].p_id %>> <%- puja[i].p_name %> </a></p>
+              </div>
+              <% } %>
               <%} %>
-              
-              
+
+
             </div>
-  
+
           </div>
         </div>
 
@@ -92,18 +109,20 @@
             </div>
             <div class="card-body">
               <% for(i = 0;i<puja.length;i++){ %>
-                <% if(puja[i].pcat === 1) { %>
-                 <div class="links"> <p><a class="puja-link" href=<%-puja[i].p_id %> > <%- puja[i].p_name %>  </a></p> </div>
-                <% } %>
+              <% if(puja[i].pcat === 1) { %>
+              <div class="links">
+                <p><a class="puja-link" href=<%-puja[i].p_id %>> <%- puja[i].p_name %> </a></p>
+              </div>
+              <% } %>
               <%} %>
-              
-              
-              
+
+
+
             </div>
-  
+
           </div>
         </div>
-        
+
         <div class="col-lg-4 col-md-12 price-card ">
           <div class="card">
             <div class="card-header">
@@ -111,19 +130,21 @@
             </div>
             <div class="card-body">
               <% for(i = 0;i<puja.length;i++){ %>
-                <% if(puja[i].pcat === 3) { %>
-                 <div class="links"> <p><a class="puja-link" href=<%-puja[i].p_id %> > <%- puja[i].p_name %>  </a></p> </div>
-                <% } %>
+              <% if(puja[i].pcat === 3) { %>
+              <div class="links">
+                <p><a class="puja-link" href=<%-puja[i].p_id %>> <%- puja[i].p_name %> </a></p>
+              </div>
+              <% } %>
               <%} %>
-              
-              
-              
+
+
+
             </div>
-  
+
           </div>
         </div>
-  
-  
+
+
       </div>
     </section>
     <section id="Bottom">
@@ -133,6 +154,7 @@
       </div>
     </section>
   </div>
- 
+
 </body>
+
 </html>
