--- a/views/index.ejs
+++ b/views/index.ejs
@@ -62,6 +62,12 @@
               </div>
               <%} %>
 
+              <%if(isLogin){%>
+                <li class="nav-item">
+                  <a class="nav-link" href="/auth/logout">Log Out</a>
+                </li>
+              <%}%>
+
             </li>
           </ul>
         </div>
