--- a/views/login.ejs
+++ b/views/login.ejs
@@ -12,14 +12,6 @@
     </div>
     <div class="col-lg-6 col-md-6 col-sm-2 login-form">
         <form action=<%="/auth/"+ path +"/login" %>  method="POST" >
-            <p  class="form-text">First Name</p>
-            <div class="input-box">
-            <input class="text-box" type="text" name="fName">
-        </div>
-            <p class="form-text">Last Name</p>
-            <div class="input-box">
-            <input class="text-box" type="text" name="lName">
-        </div>
             <p class="form-text">Email</p>
             <div class="input-box">
             <input class="text-box" type="email" name="email">
@@ -28,19 +20,15 @@
             <div class="input-box">
             <input class="text-box" type="password" name="password">
         </div> 
-            <p class="form-text">Address</p>
-            <div class="input-box">
-            <input class="text-box" type="text" name="address">
-        </div>
-            <p class="form-text">Pincode</p>
-            <div class="input-box">
-            <input class="text-box" type="number" name="pincode">
-        </div>
             <br><br>
     
             <button class="s_button red-button-login" type="submit">Login</button>
         </form>
+        <br>
+
+        <a href="/auth/user/signup">Sign up </a>
     </div>
+
 
 </div>
 
