--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -11,7 +11,7 @@
         </div>
     </div>
     <div class="col-lg-6 col-md-6 col-sm-2 login-form">
-        <form action=<%="/auth/"+ path +"/login" %>  method="POST" >
+        <form action=<%="/auth/"+ path +"/signup" %>  method="POST" >
             <p  class="form-text">First Name</p>
             <div class="input-box">
             <input class="text-box" type="text" name="fName">
