--- a/public/css/index.css
+++ b/public/css/index.css
@@ -343,7 +343,7 @@ h2{
     font-size: 1rem;
     padding: .3rem 2.5rem;
     border-radius: .5rem;
-    margin: 0 23%;
+    margin: 0 20%;
     box-shadow: .1rem .1rem gray;
     
   }
@@ -393,6 +393,10 @@ h2{
     border-right: none;
     border-bottom: none;
 
+}
+.signup{
+    font-size: 1.2rem;
+    margin-left: 5.2rem;
 }
 /******************************************Media query*************************************/
 @media(max-width:1100px){
