--- a/views/login.ejs
+++ b/views/login.ejs
@@ -26,7 +26,7 @@
         </form>
         <br>
 
-        <a href="/auth/user/signup">Sign up </a>
+        <a class="signup" href="/auth/user/signup">Sign up </a>
     </div>
 
 
