--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -38,7 +38,7 @@
         </div>
             <br><br>
     
-            <button class="s_button red-button-login" type="submit">Login</button>
+            <button class="s_button red-button-login" type="submit">Sign in</button>
         </form>
     </div>
 
