--- a/views/includes/header.ejs
+++ b/views/includes/header.ejs
@@ -39,13 +39,22 @@
               <a class="nav-link" href="#">Blog</a>
             </li>
             <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                Login
-              </a>
-              <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                <a class="dropdown-item" href="/auth/user/login">User</a>
-                <a class="dropdown-item" href="/auth/pandit/login">Panditji</a>
-              </div>
+              <% if(!isLogin){%>
+                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button"
+                  data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                  Login
+                </a>
+                <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                  <a class="dropdown-item" href="/auth/user/login">User</a>
+                  <a class="dropdown-item" href="/auth/pandit/login">Panditji</a>
+                </div>
+                <%} %>
+  
+                <%if(isLogin){%>
+                  <li class="nav-item">
+                    <a class="nav-link" href="/auth/logout">Log Out</a>
+                  </li>
+                <%}%>
             </li>
            
           </ul>
