--- a/views/index.ejs
+++ b/views/index.ejs
@@ -47,9 +47,12 @@
             <li class="nav-item">
               <a class="nav-link" href="/about">About</a>
             </li>
-            <li class="nav-item">
-              <a class="nav-link" href="/blog">Blog</a>
-            </li>
+            <% if (isLogin){%>
+              <li class="nav-item">
+                <a class="nav-link" href="/blog">Blog</a>
+              </li>
+            <%} %>
+            
             <li class="nav-item dropdown">
               <% if(!isLogin){%>
               <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button"
