--- a/views/details.ejs
+++ b/views/details.ejs
@@ -50,7 +50,7 @@
         </div>
     </div>
     <div>
-        <button class="s_button red-button-large date">Check Dates</button>
+        <button class="s_button red-button-large date"> <a href="/user/order">Check Dates</a> </button>
     </div>
 
 
