--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -32,13 +32,17 @@
             <div class="input-box">
             <input class="text-box" type="text" name="address">
         </div>
+        <p class="form-text">City</p>
+            <div class="input-box">
+            <input class="text-box" type="text" name="city">
+        </div>
             <p class="form-text">Pincode</p>
             <div class="input-box">
             <input class="text-box" type="number" name="pincode">
         </div>
             <br><br>
     
-            <button class="s_button red-button-login" type="submit">Sign in</button>
+            <button class="s_button red-button-login" type="submit">Sign Up</button>
         </form>
     </div>
 
