--- a/views/order.ejs
+++ b/views/order.ejs
@@ -1,7 +1,7 @@
 <%- include('includes/header')   -%>
 
 
-
+<div>
 <form action="/user/order" method="post">
     <input type="date" value="2018-07-22" name="date">
     <br> <br>
@@ -12,5 +12,7 @@
 </form>
 
 
-
+<div class="order-footer">
 <%-  include('includes/footer') -%>
+</div>
+</div>
